# z2gauge

./: Makefile.am  Makefile.in  README  Z2BR.files  config.h.in  configure  configure.ac
include/: conf.h  endianness.h  geometry.h  gparam.h  macro.h
lib/: conf_def.c  conf_meas.c  conf_upd.c  endianness.c  geometry.c  gparam.c  random.c
src/: z2broken.c  z2gauge.c
